[package]
name = "time-chooser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.24.0"
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
